--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,18 +17,20 @@ on:
 jobs:
   build:
 
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Set up JDK 19
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '19'
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn clean package 
+      run: mvn --batch-mode --update-snapshots package
 
+    - name: Test with Maven
+      run: mvn test
 
 
